# Attendance

./: create-icon.cjs  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.vue  i18n.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: attendance.rs  import_convert.rs  lib.rs  main.rs  util.rs
