[package]
name = "Attendance"
version = "0.0.1"
description = "考勤报表"
authors = ["evilsay"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "attendance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tauri-plugin-dialog = "2"
rust_xlsxwriter = "0.88"
chrono = "0.4"
regex = "1.8"
anyhow = "1.0"
calamine = "0.28.0"
indexmap = { version = "2.10.0", features = ["serde"] }
scraper = "0.23.1"
encoding_rs = "0.8.35"
